Added -r option that replaces math environments with nouns and verbs in a way that keeps sentences readable. Thanks to Sophie Huiberts.

Changed Makefile to fix a Mac OS X problem where frequently an empty output file was produced.

Removed states.sed that modified detex.l to avoid Lex memory overrun - no longer needed on current machines. Added detex.c to the distributed package to allow compiling OpenDetex without having Flex.

Removed 'mathmatica' from the default list of environments which contents are ignored - 'mathmatica' is not supported by TeX. Added more ignored environments: algorithm, align, smallmatrix and several more.

Fixed compilation on Cygwin.

Removed special files for OS/2 - they required compilers that no longer exist. OpenDetex should be able to be compiled using GCC for OS/2.

(Version 2.8.4) -- July, 2018

Stoped generating additional spaces after commands (#41). Thanks to Martin Nowack.

Fixed space missing in output when two newlines follow a macro (#42). Thanks to sgerwk.

Started treating newlines in inline math as spaces (#45). Thanks to sgerwk.

(Version 2.8.5) -- January, 2019

Fixed man page on macOS (#47). Thanks to FX Coudert.

Added -v option for showing version.

(Version 2.8.6) -- January, 2020

Fixed buffer overflow (CVE-2019-19601 #60). Thanks to Akira Kakuto, Norbert Preining and TeX Live team.

(Version 2.8.7) -- June, 2020

Reduced size of .tar.bz2 package by excluding object file added by mistake.

Handle forcing placement with ! (#62). Thanks to schrc3b6.

Added option to print source information with -1 (#64). Thanks to Victor Cacciari Miraldo.

(Version 2.8.8) -- June, 2020

Fixed compilation on old compilers supported by TeX Live (#65). Thanks to Akira Kakuto and Hironobu Yamashita.

(Version 2.8.9) -- December, 2020

Include escaped percent sign in output (#70). Thanks to Max Leonhardt.

(Version 2.8.10) -- December, 2023

Fixes to man page. Thanks to kberry and Hilmar Preusse.

(Version 2.8.11) -- UNRELEASED