@@ -1,0 +1,3 @@
+\documentclass[draft]{book}
+\begin{document}
+\verb+abc
