@@ -216,3 +216,5 @@ Include escaped percent sign in output (#70). Thanks to Max Leonhardt.
 Fixes to man page. Thanks to kberry and Hilmar Preusse.
 
 (Version 2.8.11) -- UNRELEASED
+
+Fixed segmentation fault on unterminated \verb.
